[package]
name = "rs-bot"
version = "0.1.0"
authors = ["EnderDev <kieran@dothq.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

[dependencies.serenity]
version = "0.9"
features = ["framework", "standard_framework", "rustls_backend"]

[dependencies.tokio]
version = "0.2"
features = ["macros"]